[package]
name = "ztp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc = "0.266.26"
swc_atoms = "0.5.9"
swc_common = { version = "0.32.1", features = ["tty-emitter"] }
swc_ecma_ast = { version = "0.109.2", features = []}
swc_ecma_transforms = "0.224.28"
swc_ecma_visit = "0.95.2"
